Remove redundant code // fix model C // fix coloring schemes

--- a/index.html
+++ b/index.html
@@ -927,6 +927,12 @@
             let modelCBuyPercentage = parseFloat(document.getElementById('modelCBuyPercentage').value) / 100;
             let modelCSellFromBuy = parseFloat(document.getElementById('modelCSellFromBuy').value) / 100;
 
+            // Adjust dynamic parameters based on selected model
+            if (selectedModel === 'modelC') {
+                buyAmountPercent = modelCBuyPercentage;
+                sellThreshold = modelCSellFromBuy;
+            }
+
             // Calculate NDX passive investment
             let ndxPassiveShares = ndxInitialInvestment / filteredNDXStockData[0].openPrice;
             let ndxPortfolioValues = filteredNDXStockData.map(data => {
@@ -985,9 +991,7 @@
                 } else if (selectedModel === 'modelB') {
                     currentPeak = highestPeak - highestPeak * buyThreshold * activeInvestments.length;
                 } else if (selectedModel === 'modelC') {
-                    buyAmountPercent = modelCBuyPercentage;
-                    sellThreshold = modelCSellFromBuy;
-                    currentPeak = highestPeak;
+                    currentPeak = highestPeak - highestPeak * buyThreshold * activeInvestments.length;
                 }
 
                 // Calculate drop from current peak
@@ -1053,53 +1057,29 @@
                             // Calculate xOffset
                             const xOffset = buyCount * OFFSET_INCREMENT;
 
-                            // Add buy point with adjusted x-value
+                            // Determine the hover text based on the selected model
+                            let hoverText = '';
                             if (selectedModel === 'modelA') {
-                                // Trigger purchase based on 5% drop from the last purchase, but show drop from highest peak
-                                buyPoints.push({
-                                    x: new Date(dataDate.getTime() + xOffset),
-                                    y: totalValue,
-                                    marker: {
-                                        color: markerProperties.color,
-                                        symbol: 'circle',
-                                        size: 8,
-                                        line: {
-                                            width: 1
-                                        }
-                                    },
-                                    hovertext: `Buy (Model A): ${data.date}, Drop from Highest Peak: ${dropFromHighestPeak.toFixed(6)}%, Price: $${buy_price.toFixed(2)}, Bought: ${sharesToBuy.toFixed(2)} shares`
-                                });
+                                hoverText = `Buy (Model A): ${data.date}, Drop from Highest Peak: ${dropFromHighestPeak.toFixed(2)}%, Price: $${buy_price.toFixed(2)}, Bought: ${sharesToBuy.toFixed(2)} shares`;
                             } else if (selectedModel === 'modelB') {
-                                // For Model B: Display drop percentage as usual
-                                buyPoints.push({
-                                    x: new Date(dataDate.getTime() + xOffset),
-                                    y: totalValue,
-                                    marker: {
-                                        color: markerProperties.color,
-                                        symbol: 'circle',
-                                        size: 8,
-                                        line: {
-                                            width: 1
-                                        }
-                                    },
-                                    hovertext: `Buy: ${data.date}, Drop: ${cumulativeDropPercentage.toFixed(2)}%, Price: $${buy_price.toFixed(2)}, Bought: ${sharesToBuy.toFixed(2)} shares`
-                                });
+                                hoverText = `Buy (Model B): ${data.date}, Drop: ${cumulativeDropPercentage.toFixed(2)}%, Price: $${buy_price.toFixed(2)}, Bought: ${sharesToBuy.toFixed(2)} shares`;
                             } else if (selectedModel === 'modelC') {
-                                // For Model B: Display drop percentage as usual
-                                buyPoints.push({
-                                    x: new Date(dataDate.getTime() + xOffset),
-                                    y: totalValue,
-                                    marker: {
-                                        color: markerProperties.color,
-                                        symbol: 'circle',
-                                        size: 8,
-                                        line: {
-                                            width: 1
-                                        }
-                                    },
-                                    hovertext: `Buy (Model C): ${data.date}, Price: $${buy_price.toFixed(2)}, Bought: ${sharesToBuy.toFixed(2)} shares`
-                                });
-                            }} else {
+                                hoverText = `Buy (Model C): ${data.date}, Drop: ${cumulativeDropPercentage.toFixed(2)}%, Price: $${buy_price.toFixed(2)}, Bought: ${sharesToBuy.toFixed(2)} shares`;
+                            }
+
+                            // Add buy point with adjusted x-value
+                            buyPoints.push({
+                                x: new Date(dataDate.getTime() + xOffset),
+                                y: totalValue,
+                                marker: {
+                                    color: markerProperties.color,
+                                    symbol: 'circle',
+                                    size: 8,
+                                    line: { width: 1 }
+                                },
+                                hovertext: hoverText
+                            });
+                            } else {
                             break; // Break the loop if the low price is not suitable for a buy
                         }
                         // Recalculate drop from current peak after the purchase
@@ -1117,7 +1097,7 @@
                     // Calculate the exact target sell price based on the selected model
                     if (selectedModel === 'modelC') {
                         // Model C's custom sell condition
-                        targetSellPrice = investment.buyPrice * (1 + (modelCSellFromBuy / 100)); // Use custom sell percentage from Model C
+                        targetSellPrice = investment.buyPrice * (1 + (modelCSellFromBuy)); // Use custom sell percentage from Model C
                     } else {
                         // For other models, use the default sell threshold
                         targetSellPrice = investment.buyPrice * (1 + sellThreshold);
